--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hooks-paginator": "^0.5.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
